<resources>
    <string name="app_name">BinInfo</string>
    <string name="retry">RETRY</string>
    <string name="get_info">Get Info</string>
    <string name="instruction">Enter BIN code(first 8 digits of card number):</string>
    <string name="hint">Enter BIN numbers</string>
    <string name="brand">Card brand:</string>
    <string name="bank_site">Bank site:</string>
    <string name="bank">Bank:</string>
    <string name="bank_phone">Bank phone:</string>
    <string name="country">Country:</string>
    <string name="input_error_length">Incorrect number of digits</string>
    <string name="input_error_empty">You should enter BIN code</string>
    <string name="input_error_invalid_chars">BIN code should contain only digits</string>
    <string name="no_data_error_msg">There is no info for this BIN code. Check the input for correctness</string>
    <string name="no_internet_error_msg">Check internet connection</string>
    <string name="error_server_is_not_response">Server is not response. Try later</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="history">History</string>
    <string name="empty_history">Empty history</string>
    <string name="bin_code">BIN code:</string>
    <string name="alert_dialog_title">Do you really want to clear history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>