<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/middle_margin"
    android:layout_marginTop="@dimen/middle_margin"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bin_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bin_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/text_bin_title"
            app:layout_constraintTop_toTopOf="@+id/text_bin_title"
            tools:text="47619384" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_brand_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bin_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_brand_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/text_brand_title"
            app:layout_constraintTop_toTopOf="@+id/text_brand_title"
            tools:text="VISA" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_brand_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/text_bank_title"
            app:layout_constraintTop_toTopOf="@+id/text_bank_title"
            tools:text="World Bank" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_site_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_site"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bank_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_site_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/text_bank_site_title"
            app:layout_constraintTop_toTopOf="@+id/text_bank_site_title"
            tools:text="www.bank.com" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_phone_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bank_site_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_bank_phone_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/text_bank_phone_title"
            app:layout_constraintTop_toTopOf="@+id/text_bank_phone_title"
            tools:text="+342151513" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_country_title"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/middle_margin"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bank_phone_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_country_value"
            style="@style/Widget.BinInfo.TextView.GetInfoScreenValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/text_country_title"
            app:layout_constraintTop_toTopOf="@+id/text_country_title"
            tools:text="Vakanda" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_marginEnd="@dimen/middle_margin"
            app:icon="@drawable/ic_delete"
            app:iconTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/text_bin_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_query_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/middle_margin"
            app:layout_constraintBottom_toBottomOf="@+id/text_country_value"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="25.12.2022 17:36:42" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>